feat: ddl table and Authentication Authorization for API

--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,3 +1,7 @@
 NODE_ENV=development
-PORT=8000
-DATABASE_URL="mysql://root@localhost:3306/mydb"
+PORT=8080
+DATABASE_URL="mysql://root:irvan@localhost:3306/minpro_db"
+API_KEY="v4ntra"
+FE_URL="http://localhost:3000"
+NODEMAILER_EMAIL = "irvansaputra234@gmail.com"
+NODEMAILER_PASS = "jjrk ocmb tdma kfkq"
