--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,16 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ES2017",
+    "lib": ["es2017", "ES2021.String", "esnext.asynciterable"],
     "module": "commonjs",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noEmit": false,
+    "declaration": true,
+    "typeRoots": ["node_modules/@types"]
   },
   // "include": ["src/**/*"],
   "include": ["**/*.ts"],
